--- a/output/allbc_sens.tex
+++ b/output/allbc_sens.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{>{\bfseries}lcc|cc|cc} \toprule
 	&	\multicolumn{2}{c}{\textbf{\textit{Pooled}}}	&	\multicolumn{2}{c}{\textbf{\textit{Males}}}	&	\multicolumn{2}{c}{\textbf{\textit{Females}}}	\\
-Baseline	&	\multicolumn{2}{c}{5.72 (s.e. 2.38)}	&	\multicolumn{2}{c}{11.44 (s.e. 5.60)}	&	\multicolumn{2}{c}{2.70 s.e. 0.99)}	\\ \\
+Baseline	&	\multicolumn{2}{c}{\textbf{5.72} (s.e. 2.38)}	&	\multicolumn{2}{c}{\textbf{11.44} (s.e. 5.60)}	&	\multicolumn{2}{c}{2.70 s.e. (0.99)}	\\ \\
 \multicolumn{7}{l}{\textit{Baseline: IPW and Control variables, Life-span up to predicted death, Treatment vs. Next Best, 50\% Marginal tax 50\% (deadweight loss), Discount rate 3\%, }} \\	
 \multicolumn{7}{l}{\textit{Parental income 0 to 21 (child's age), Labor Income predicted from 21 to 65, All crimes (full costs), Value of life 150,000.}} \\ \\ \midrule	
 Specification	&	\textit{No IPW}	&	\textit{\& No Control Variables}	&	\textit{No IPW}	&	\textit{\& No Control Variables}	&	\textit{No IPW}	&	\textit{\& No Control Variables}	\\
