--- a/Appendices/Health/bgdesc.tex
+++ b/Appendices/Health/bgdesc.tex
@@ -6,13 +6,13 @@ To project the life-cycle path of health outcomes and medical expenditures, we u
 
 \noindent The defining characteristic of this approach is the modeling of real rather than synthetic cohorts, all of whom
 are followed at the individual level. This allows for more heterogeneity in behavior than would be allowed
-by a cell-based approach. The core of the model can be described as follows: first, the cohort starter module contains the health outcomes of the ABC/CARE subjects at age 30 and other variables that are used as input for the simulation of individual trajectories. This module uses ABC/CARE data. Missing variables in the ABC/CARE data are imputed probabilistically from models estimated using PSID data.  Next, the transition module calculates the individual probabilities of transiting across various health states and other outcomes relevant to health. The transition probabilities are estimated from the longitudinal data in the PSID, taking as inputs risk factors such as smoking, weight, alcohol consumption, gender, race and ethnicity, age and education, along with lagged health, personal, and economic states.\footnote{Section \ref{section:data} provides details about the data sources used in the estimation.} This scheme allows for a great deal of heterogeneity and fairly general feedback effects. Finally, the policy outcomes module aggregates projections of individual-level outcomes into policy outcomes such as
-taxes, medical expenditures, and disability benefits. \\
+by a cell-based approach. The core of the model can be described as follows: first, the cohort starter module contains the health outcomes of the ABC/CARE subjects at age 30 and other variables that are used as input for the simulation of individual trajectories. This module uses ABC/CARE data. Missing variables in the ABC/CARE data are imputed probabilistically from models estimated using PSID data. Next, the transition module calculates the individual probabilities of transiting across various health states and other outcomes relevant to health. The transition probabilities are estimated from the longitudinal data in the PSID, taking as inputs risk factors such as smoking, weight, alcohol consumption, gender, race and ethnicity, age and education, along with lagged health, personal, and economic states.\footnote{Section \ref{section:data} provides details about the data sources used in the estimation.} This scheme allows for a great deal of heterogeneity and fairly general feedback effects. Finally, the outcomes module aggregates projections of individual-level outcomes into outcomes such as
+QALY and medical expenditures. \\
 
 
 \noindent The cohort starter module includes the following variables for each ABC/CARE subject: \\
 \begin{itemize}
-\item Individual characteristics: year of birth, gender, treatment status, education of the mother, self-reported ``poor'' as a child, race, and education at age 30.
+\item Individual characteristics: year of birth, gender, treatment status, education of the mother, self-reported ``poor'' economic condition as a child, race, and education at age 30.
 \item Economic outcomes at age 30: working status, earnings, and health insurance status.
 \item Health outcomes and health behaviors at age 30: body mass index (BMI), smoking, binge drinking, physical activity, psychological distress, asthma, high blood pressure, heart disease, cancer, lung disease, diabetes, and stroke.
 \end{itemize}
